{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 33,
  "lineage": "dde2d216-1aaa-4bd2-21eb-914b6e5abe16",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "proj2_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501894534533:internet-gateway/igw-098d93a0e9c7effaa",
            "id": "igw-098d93a0e9c7effaa",
            "owner_id": "501894534533",
            "tags": {
              "Name": "proj2-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "proj2-igw",
              "Project": "proj2"
            },
            "vpc_id": "vpc-025c70216bd21e55c"
          },
          "dependencies": [
            "aws_vpc.proj2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "proj2_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:501894534533:loadbalancer/app/proj2-alb/e84726ce8b86ae60",
            "arn_suffix": "app/proj2-alb/e84726ce8b86ae60",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "proj2-alb-830302272.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:501894534533:loadbalancer/app/proj2-alb/e84726ce8b86ae60",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "proj2-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08111206409a97f83"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08c639441bfefbed5"
              },
              {
                "subnet_id": "subnet-0f8cae1cf0464c070"
              }
            ],
            "subnets": [
              "subnet-08c639441bfefbed5",
              "subnet-0f8cae1cf0464c070"
            ],
            "tags": {
              "Name": "proj2-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "proj2-alb",
              "Project": "proj2"
            },
            "vpc_id": "vpc-025c70216bd21e55c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.proj2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:501894534533:listener/app/proj2-alb/e84726ce8b86ae60/a8bd8f5f426a268b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:501894534533:targetgroup/proj2-tg/3b66aac7debb06a7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:501894534533:listener/app/proj2-alb/e84726ce8b86ae60/a8bd8f5f426a268b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:501894534533:loadbalancer/app/proj2-alb/e84726ce8b86ae60",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "proj2-alb-listener"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "proj2-alb-listener",
              "Project": "proj2"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.proj2_alb",
            "aws_lb_target_group.proj2_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.proj2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "proj2_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:501894534533:targetgroup/proj2-tg/3b66aac7debb06a7",
            "arn_suffix": "targetgroup/proj2-tg/3b66aac7debb06a7",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:501894534533:targetgroup/proj2-tg/3b66aac7debb06a7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:501894534533:loadbalancer/app/proj2-alb/e84726ce8b86ae60"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "proj2-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "proj2-tg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "proj2-tg",
              "Project": "proj2"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-025c70216bd21e55c"
          },
          "dependencies": [
            "aws_vpc.proj2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501894534533:route-table/rtb-03a9e65e2e7fc2f73",
            "id": "rtb-03a9e65e2e7fc2f73",
            "owner_id": "501894534533",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-098d93a0e9c7effaa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "proj2-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "proj2-public-rt",
              "Project": "proj2"
            },
            "timeouts": null,
            "vpc_id": "vpc-025c70216bd21e55c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.proj2_igw",
            "aws_vpc.proj2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd33440e019b66ac",
            "route_table_id": "rtb-03a9e65e2e7fc2f73",
            "subnet_id": "subnet-08c639441bfefbed5"
          },
          "dependencies": [
            "aws_internet_gateway.proj2_igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.proj2_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7d63c7bf6631b10",
            "route_table_id": "rtb-03a9e65e2e7fc2f73",
            "subnet_id": "subnet-0f8cae1cf0464c070"
          },
          "dependencies": [
            "aws_internet_gateway.proj2_igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.proj2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501894534533:security-group/sg-08111206409a97f83",
            "description": "Security group for ALB - allows HTTP from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08111206409a97f83",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "proj2-alb-sg",
            "name_prefix": "",
            "owner_id": "501894534533",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "proj2-alb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "proj2-alb-sg",
              "Project": "proj2"
            },
            "timeouts": null,
            "vpc_id": "vpc-025c70216bd21e55c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.proj2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501894534533:security-group/sg-0681b6ec6a3187236",
            "description": "Security group for ECS tasks - allows traffic from ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP for general connectivity",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS for ECR and CloudWatch",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0681b6ec6a3187236",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Container port from ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08111206409a97f83"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "proj2-ecs-sg",
            "name_prefix": "",
            "owner_id": "501894534533",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "proj2-ecs-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "proj2-ecs-sg",
              "Project": "proj2"
            },
            "timeouts": null,
            "vpc_id": "vpc-025c70216bd21e55c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.proj2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501894534533:subnet/subnet-08c639441bfefbed5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c639441bfefbed5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "501894534533",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "proj2-public-subnet-1",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "proj2-public-subnet-1",
              "Project": "proj2",
              "Type": "public"
            },
            "vpc_id": "vpc-025c70216bd21e55c"
          },
          "dependencies": [
            "aws_vpc.proj2_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501894534533:subnet/subnet-0f8cae1cf0464c070",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8cae1cf0464c070",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "501894534533",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "proj2-public-subnet-2",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "proj2-public-subnet-2",
              "Project": "proj2",
              "Type": "public"
            },
            "vpc_id": "vpc-025c70216bd21e55c"
          },
          "dependencies": [
            "aws_vpc.proj2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "proj2_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501894534533:vpc/vpc-025c70216bd21e55c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e70ae5fac9e3b418",
            "default_route_table_id": "rtb-071765b6479f55c4e",
            "default_security_group_id": "sg-00c828269711835f9",
            "dhcp_options_id": "dopt-00f171a3054b3f3cf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-025c70216bd21e55c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-071765b6479f55c4e",
            "owner_id": "501894534533",
            "tags": {
              "Name": "proj2-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "proj2-vpc",
              "Project": "proj2"
            }
          }
        }
      ]
    }
  ]
}